# AI-API

./: .dockerignore  .gitignore  CLEANUP_ANALYSIS.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CODE_REVIEW.md  COMMIT_READY.md  Dockerfile  FINAL_REVIEW_REPORT.md  FIXES_APPLIED.md  GIT_ORGANIZATION_PLAN.md  GIT_REORGANIZATION_COMPLETE.md  GIT_STATUS_SUMMARY.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_COMPLETE.md  INTEGRATION_IMPROVEMENTS.md  INTEGRATION_INDEX.md  INTEGRATION_ISSUES.md  INTEGRATION_TESTING_GUIDE.md  Makefile  QUICK_REFERENCE.md  QUICK_START.md  README.md  REVIEW_SUMMARY.md  SEARCH_IMPROVEMENTS_SUMMARY.md  SEPARATE_REPOS_SETUP.md  SERPAPI_INTEGRATION.md  TESTING_GUIDE.md  WEBSCRAPING_IMPROVEMENTS.md  chat_service_pb2.py  chat_service_pb2_grpc.py  pyproject.toml  requirements-base.txt  requirements-ml.txt  requirements.txt  setup.py  start-data-collection.sh  web_ui.py
ai_orchestrator/: .cleanup_complete  .env  .env.enhanced  .env.example  AGENT_ENHANCEMENTS.md  BACKEND_INTEGRATION.md  CHANGES.md  ENHANCED_FEATURES.md  ENTITY_REFERENCES.md  FLYWAY_INTEGRATION_GUIDE.md  JAVA_INTEGRATION.md  JAVA_SCHEMA_INTEGRATION.md  JAVA_SESSION_MANAGEMENT.md  Makefile  POSTGRESQL_SETUP.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SUMMARY.txt  TOOL_IMPROVEMENTS.md  WEB_CRAWLING_IMPROVEMENTS.md  WEB_UI_GUIDE.md  chat_service_pb2.py  chat_service_pb2_grpc.py  debug_filtering.py  debug_search_structure.py  debug_synthesis.py  debug_tool_execution.py  example_client.py  init_database.py  initialize_vector_store.py  inspect_vector_store.py  migrate_to_postgresql.py  (+38 more)
(+137 files in other folders)
